app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
