app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
